kubernetes/apps/tier-1-infrastructure/kiali/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: observability
spec:
  hostnames:
    - kiali.sulibot.com
  parentRefs:
    - name: gateway-internal
      namespace: network
  rules:
    - backendRefs:
        - name: kiali
          port: 20001
